reduced space under nav bar, removed max width from dashboard.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -23,7 +23,7 @@
                        <p>slate</p>
                  </div>
 
-                 <span class="header-icon"><i class="fas fa-bars"></i></span>
+                 <span class="header-icon"><i class="fas fa-bars fa-1x"></i></span>
 
            </header>
 
