all routes working. Set up route to update capacity. Is not yet printing to the dom. Next steps: Going back to possibly add indevidual javascript files to handle server calls more efficiently.

--- a/app/public/reserve.html
+++ b/app/public/reserve.html
@@ -80,7 +80,7 @@ var newReservation = {}
 
                  var currentURL = window.location.origin;
 
-                 $.post(currentURL = "/api/tables", newReservation, function(data){
+                 $.post(currentURL + "/api/tables", newReservation, function(data){
 
                   console.log("Data: ", data)
 
