--- a/app/public/home.html
+++ b/app/public/home.html
@@ -107,7 +107,7 @@
                             <!--------------------Tabs---------------------- -->
                             <div class="nav row">
 
-                              <a href="" class="tab-links" id="home"><i class="fas fa-home fa-2x active"></i></a>
+                              <a href="" class="tab-links" id="home"><i class="fas fa-home fa-2x" id="active"></i></a>
 
                              <a href="/tables" id="tables" class="tab-links" data-target="tables.html"><i class="fas fa-th-large fa-2x"></i></a>
 
@@ -333,12 +333,8 @@ $(".submit-modal").click(function(){
 //---------------- Make Buttons Active ----------------------
 
 $('.tab-links').mousedown(function(e){
-      console.log("click")
-$(e.currentTarget).children().addClass("active-click")    
+                  $(e.currentTarget).children().attr("id","active-click")    
 })
-
-
-
 
 
 getDayOfWeek();
