--- a/app/public/tables.html
+++ b/app/public/tables.html
@@ -72,7 +72,7 @@
 
                   <a href="/" class="tab-links"><i class="fas fa-home fa-2x"></i></a>
 
-                 <a href="/tables" class="tab-links"><i class="fas fa-th-large fa-2x active"></i></a>
+                 <a href="/tables" class="tab-links"><i class="fas fa-th-large fa-2x"id="active"></i></a>
 
                  <a href="/reserve " class="tab-links"><i class="fas fa-plus-square fa-2x"></i></a>
       
@@ -240,9 +240,8 @@ function deleteTable(item){
 //---------------- Make Buttons Active ----------------------
 
 $('.tab-links').mousedown(function(e){
-$(e.currentTarget).children().addClass("active-click")    
+                  $(e.currentTarget).children().attr("id","active-click")    
 })
-
 
 
 runTableQuery()
